--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,7 @@
 	padding-left: 5px;
 	margin-top: 8px;
 	margin-bottom: 8px;
-	background: #00FFFF;
+	background: rgba(70, 173, 212, 0.4);
 	font-family: "lucida sans unicode", "lucida grande", sans-serif;
 	font-size: 10px;
 }
