--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@
 body {
 	margin-right: 15%;
 	margin-left: 15%;
-	background: linear-gradient(90deg, #7d7e7d 0%, #0e0e0e 100%);
+	background: url("http://wallpoper.com/images/00/34/24/96/pokemon-clouds_00342496.jpg");
 }
 button {
 	background-color: #00FFFF;
