--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@
 body {
 	margin-right: 15%;
 	margin-left: 15%;
-	background-image: url("http://wallpoper.com/images/00/34/24/96/pokemon-clouds_00342496.jpg");
+	background-image: url("http://wallpoper.com/images/00/34/24/96/pokemon-clouds_00342496.jpg") no-repeat center center fixed;
 }
 button {
 	background-color: #00FFFF;
