--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 }
 .textbody {
 	border-radius: 12px;
-	border: 1.5px solid #ff9b44;
+	border: 1.5px solid #120A8F;
 	margin: auto;
 	padding-top: 5px;
 	padding-bottom: 8px;
@@ -14,20 +14,9 @@
 	padding-left: 5px;
 	margin-top: 8px;
 	margin-bottom: 8px;
-	background: rgba(70, 173, 212, 0.4);
+	background: rgba(70, 173, 212, 0.3);
 	font-family: "lucida sans unicode", "lucida grande", sans-serif;
 	font-size: 10px;
-}
-.footer {
-	color: black;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	padding: .3rem;
-	font-size: 10px;
-	background-color: #ffb356;
-	text-align: center;
 }
 body {
 	margin-right: 15%;
@@ -39,7 +28,7 @@ button {
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 10px;
 	border-radius: 6px;
-	border: 2px solid #de8c11;
+	border: 2px solid #120A8F;
 	font-family: monospace;
 	font-size: 10px;
 	padding: 2px 7px;
@@ -49,5 +38,5 @@ button {
 	text-align: center;
 }
 button:hover {
-	background-color: #FF9933
+	background-color: #120A8F
 }
