--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 }
 .textbody {
 	border-radius: 12px;
-	border: 1.5px solid #120A8F;
+	border: 1.5px solid #0062FF;
 	margin: auto;
 	padding-top: 5px;
 	padding-bottom: 8px;
@@ -28,7 +28,7 @@ button {
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 10px;
 	border-radius: 6px;
-	border: 2px solid #120A8F;
+	border: 2px solid #0062FF;
 	font-family: monospace;
 	font-size: 10px;
 	padding: 2px 7px;
@@ -38,5 +38,5 @@ button {
 	text-align: center;
 }
 button:hover {
-	background-color: #120A8F
+	background-color: #0062FF
 }
