--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,10 @@
 body {
 	margin-right: 15%;
 	margin-left: 15%;
-	background:url("http://wallpoper.com/images/00/34/24/96/pokemon-clouds_00342496.jpg") no-repeat fixed
+	background-image:url("http://wallpoper.com/images/00/34/24/96/pokemon-clouds_00342496.jpg");
+	background-repeat: no-repeat;
+   	background-attachment: fixed;
+    	background-position: center; 	
 }
 button {
 	background-color: #00FFFF;
