--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@
 	background: rgba(70, 173, 212, 0.3);
 	font-family: "lucida sans unicode", "lucida grande", sans-serif;
 	font-size: 10px;
+	cursor:url(http://www.rw-designer.com/cursor-view/36368.png), auto;
 }
 body {
 	margin-right: 15%;
